tests/snapshots/snapshots__text-input-disabled.snap
---
source: tests/snapshots.rs
expression: dump(&entry)
---
== dark-truecolor
Organization
  shannon-labs
· Set by your administrator
---
r0 c0..12 fg=Muted bg=Background dim
r0 c12..40 bg=Background
r1 c0..2 bg=Background
r1 c2..14 fg=Muted bg=Background dim
r1 c14..40 bg=Background
r2 c0..1 fg=Muted bg=Background
r2 c1..2 bg=Background
r2 c2..27 fg=Muted bg=Background
r2 c27..40 bg=Background

== dark-graphite
Organization
  shannon-labs
· Set by your administrator
---
r0 c0..12 fg=Muted bg=Background dim
r0 c12..40 bg=Background
r1 c0..2 bg=Background
r1 c2..14 fg=Muted bg=Background dim
r1 c14..40 bg=Background
r2 c0..1 fg=Muted bg=Background
r2 c1..2 bg=Background
r2 c2..27 fg=Muted bg=Background
r2 c27..40 bg=Background

== light-truecolor
Organization
  shannon-labs
· Set by your administrator
---
r0 c0..12 fg=Muted bg=Background dim
r0 c12..40 bg=Background
r1 c0..2 bg=Background
r1 c2..14 fg=Muted bg=Background dim
r1 c14..40 bg=Background
r2 c0..1 fg=Muted bg=Background
r2 c1..2 bg=Background
r2 c2..27 fg=Muted bg=Background
r2 c27..40 bg=Background

== dark-256
Organization
  shannon-labs
· Set by your administrator
---
r0 c0..12 fg=Muted bg=Background dim
r0 c12..40 bg=Background
r1 c0..2 bg=Background
r1 c2..14 fg=Muted bg=Background dim
r1 c14..40 bg=Background
r2 c0..1 fg=Muted bg=Background
r2 c1..2 bg=Background
r2 c2..27 fg=Muted bg=Background
r2 c27..40 bg=Background

== light-256
Organization
  shannon-labs
· Set by your administrator
---
r0 c0..12 fg=Muted bg=Background|Surface dim
r0 c12..40 bg=Background|Surface
r1 c0..2 bg=Background|Surface
r1 c2..14 fg=Muted bg=Background|Surface dim
r1 c14..40 bg=Background|Surface
r2 c0..1 fg=Muted bg=Background|Surface
r2 c1..2 bg=Background|Surface
r2 c2..27 fg=Muted bg=Background|Surface
r2 c27..40 bg=Background|Surface

== ansi-16
Organization
  shannon-labs
· Set by your administrator
---
r0 c0..12 dim
r1 c2..14 dim
r2 c0..1 dim
r2 c2..27 dim

== unknown-ground
Organization
  shannon-labs
· Set by your administrator
---
r0 c0..12 dim
r1 c2..14 dim
r2 c0..1 dim
r2 c2..27 dim

== no-color
Organization
  shannon-labs
· Set by your administrator
---
r0 c0..12 dim
r1 c2..14 dim
r2 c0..1 dim
r2 c2..27 dim

== ascii
Organization
  shannon-labs
. Set by your administrator
---
r0 c0..12 dim
r1 c2..14 dim
r2 c0..1 dim
r2 c2..27 dim
