tests/snapshots/snapshots__text-input-invalid.snap
---
source: tests/snapshots.rs
expression: dump(&entry)
---
== dark-truecolor
Port
› 70000
✕ Enter a port from 1 to 65535.
---
r0 c0..4 fg=Foreground bg=Background bold
r0 c4..40 bg=Background
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..7 fg=Foreground bg=Selected
r1 c7..8 bg=Selected reversed
r1 c8..40 bg=Selected
r2 c0..1 fg=Danger bg=Background
r2 c1..2 bg=Background
r2 c2..31 fg=Foreground bg=Background
r2 c31..40 bg=Background

== dark-graphite
Port
› 70000
✕ Enter a port from 1 to 65535.
---
r0 c0..4 fg=Foreground bg=Background bold
r0 c4..40 bg=Background
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..7 fg=Foreground bg=Selected
r1 c7..8 bg=Selected reversed
r1 c8..40 bg=Selected
r2 c0..1 fg=Danger bg=Background
r2 c1..2 bg=Background
r2 c2..31 fg=Foreground bg=Background
r2 c31..40 bg=Background

== light-truecolor
Port
› 70000
✕ Enter a port from 1 to 65535.
---
r0 c0..4 fg=Foreground bg=Background bold
r0 c4..40 bg=Background
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..7 fg=Foreground bg=Selected
r1 c7..8 bg=Selected reversed
r1 c8..40 bg=Selected
r2 c0..1 fg=Danger bg=Background
r2 c1..2 bg=Background
r2 c2..31 fg=Foreground bg=Background
r2 c31..40 bg=Background

== dark-256
Port
› 70000
✕ Enter a port from 1 to 65535.
---
r0 c0..4 fg=Foreground bg=Background bold
r0 c4..40 bg=Background
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..7 fg=Foreground bg=Selected
r1 c7..8 bg=Selected reversed
r1 c8..40 bg=Selected
r2 c0..1 fg=Danger bg=Background
r2 c1..2 bg=Background
r2 c2..31 fg=Foreground bg=Background
r2 c31..40 bg=Background

== light-256
Port
› 70000
✕ Enter a port from 1 to 65535.
---
r0 c0..4 fg=Foreground bg=Background|Surface bold
r0 c4..40 bg=Background|Surface
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..7 fg=Foreground bg=Selected
r1 c7..8 bg=Selected reversed
r1 c8..40 bg=Selected
r2 c0..1 fg=Danger bg=Background|Surface
r2 c1..2 bg=Background|Surface
r2 c2..31 fg=Foreground bg=Background|Surface
r2 c31..40 bg=Background|Surface

== ansi-16
Port
› 70000
✕ Enter a port from 1 to 65535.
---
r0 c0..4 bold
r1 c0..1 fg=Primary
r1 c7..8 reversed
r2 c0..1 fg=Danger

== unknown-ground
Port
› 70000
✕ Enter a port from 1 to 65535.
---
r0 c0..4 bold
r1 c0..1 fg=Primary
r1 c7..8 reversed
r2 c0..1 fg=Danger

== no-color
Port
› 70000
✕ Enter a port from 1 to 65535.
---
r0 c0..4 bold
r1 c7..8 reversed

== ascii
Port
> 70000
X Enter a port from 1 to 65535.
---
r0 c0..4 bold
r1 c7..8 reversed
