tests/snapshots/snapshots__text-input-secret.snap
---
source: tests/snapshots.rs
expression: dump(&entry)
---
== dark-truecolor
API key
› •••••••••••••••
---
r0 c0..7 fg=Foreground bg=Background bold
r0 c7..40 bg=Background
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..17 fg=Foreground bg=Selected
r1 c17..18 bg=Selected reversed
r1 c18..40 bg=Selected

== dark-graphite
API key
› •••••••••••••••
---
r0 c0..7 fg=Foreground bg=Background bold
r0 c7..40 bg=Background
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..17 fg=Foreground bg=Selected
r1 c17..18 bg=Selected reversed
r1 c18..40 bg=Selected

== light-truecolor
API key
› •••••••••••••••
---
r0 c0..7 fg=Foreground bg=Background bold
r0 c7..40 bg=Background
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..17 fg=Foreground bg=Selected
r1 c17..18 bg=Selected reversed
r1 c18..40 bg=Selected

== dark-256
API key
› •••••••••••••••
---
r0 c0..7 fg=Foreground bg=Background bold
r0 c7..40 bg=Background
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..17 fg=Foreground bg=Selected
r1 c17..18 bg=Selected reversed
r1 c18..40 bg=Selected

== light-256
API key
› •••••••••••••••
---
r0 c0..7 fg=Foreground bg=Background|Surface bold
r0 c7..40 bg=Background|Surface
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..17 fg=Foreground bg=Selected
r1 c17..18 bg=Selected reversed
r1 c18..40 bg=Selected

== ansi-16
API key
› •••••••••••••••
---
r0 c0..7 bold
r1 c0..1 fg=Primary
r1 c17..18 reversed

== unknown-ground
API key
› •••••••••••••••
---
r0 c0..7 bold
r1 c0..1 fg=Primary
r1 c17..18 reversed

== no-color
API key
› •••••••••••••••
---
r0 c0..7 bold
r1 c17..18 reversed

== ascii
API key
> ***************
---
r0 c0..7 bold
r1 c17..18 reversed
