tests/snapshots/snapshots__text-input-typed.snap
---
source: tests/snapshots.rs
expression: dump(&entry)
---
== dark-truecolor
Name
› nightly-report
---
r0 c0..4 fg=Foreground bg=Background bold
r0 c4..40 bg=Background
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..16 fg=Foreground bg=Selected
r1 c16..17 bg=Selected reversed
r1 c17..40 bg=Selected

== dark-graphite
Name
› nightly-report
---
r0 c0..4 fg=Foreground bg=Background bold
r0 c4..40 bg=Background
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..16 fg=Foreground bg=Selected
r1 c16..17 bg=Selected reversed
r1 c17..40 bg=Selected

== light-truecolor
Name
› nightly-report
---
r0 c0..4 fg=Foreground bg=Background bold
r0 c4..40 bg=Background
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..16 fg=Foreground bg=Selected
r1 c16..17 bg=Selected reversed
r1 c17..40 bg=Selected

== dark-256
Name
› nightly-report
---
r0 c0..4 fg=Foreground bg=Background bold
r0 c4..40 bg=Background
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..16 fg=Foreground bg=Selected
r1 c16..17 bg=Selected reversed
r1 c17..40 bg=Selected

== light-256
Name
› nightly-report
---
r0 c0..4 fg=Foreground bg=Background|Surface bold
r0 c4..40 bg=Background|Surface
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..16 fg=Foreground bg=Selected
r1 c16..17 bg=Selected reversed
r1 c17..40 bg=Selected

== ansi-16
Name
› nightly-report
---
r0 c0..4 bold
r1 c0..1 fg=Primary
r1 c16..17 reversed

== unknown-ground
Name
› nightly-report
---
r0 c0..4 bold
r1 c0..1 fg=Primary
r1 c16..17 reversed

== no-color
Name
› nightly-report
---
r0 c0..4 bold
r1 c16..17 reversed

== ascii
Name
> nightly-report
---
r0 c0..4 bold
r1 c16..17 reversed
